[workspace]
members = [
    "fxprof-processed-profile",
    "gecko_profile",
    "samply-api",
    "samply-symbols",
    "samply",
    "wholesym",
    "wholesym-addr2line",
    "tools/benchmarks",
    "tools/dump_table",
    "tools/query_api"
]
resolver = "2"
default-members = ["samply"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Don't build benchmarks and other unneeded crates
precise-builds = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
