[workspace]
resolver = "2"
default-members = ["samply"]
members = [
    "fxprof-processed-profile",
    "gecko_profile",
    "samply-api",
    "samply-debugid",
    "samply-quota-manager",
    "samply-symbols",
    "samply",
    "wholesym",
    "wholesym-addr2line",
    "tools/benchmarks",
    "tools/dump_table",
    "tools/query_api"
]
exclude = ["etw-reader"] # Should not be compiled on non-Windows

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
