[package]
name = "etw-gecko"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
fxprof-processed-profile = { git = "https://github.com/mstange/samply/", rev="4f8be184ebfc6a345238dd52ffe4917e23a176dd" }
uuid = "1" # We really want gecko_profile::debugid::uuid, but debugid doesn't re-export uuid
etw-reader = { path = "../etw-reader" }
pico-args = "0.4.2"
