[package]
name = "etw-gecko"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
fxprof-processed-profile = { git = "https://github.com/mstange/samply/", rev="e0419395dbcc00aa2b86cb6fe56bf94e09d791a0" }
uuid = "1" # We really want gecko_profile::debugid::uuid, but debugid doesn't re-export uuid
etw-reader = { path = "../etw-reader" }
pico-args = "0.4.2"
fxhash = "0.2.1"
rangemap = "1.3.0"
bitflags = "2.4.2"
