[package]
name = "etw-gecko"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
fxprof-processed-profile = { git = "https://github.com/mstange/samply/", rev="c6cc82a7d2580a73fd7fa4831a2bf87d519a5f69" }
uuid = "1" # We really want gecko_profile::debugid::uuid, but debugid doesn't re-export uuid
etw-reader = { path = "../etw-reader" }
pico-args = "0.4.2"
fxhash = "0.2.1"
rangemap = "1.3.0"
bitflags = "2.4.2"
