[package]
name = "etw-reader"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.21.1"
bitflags = "1.2.1"
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.8.0"


[build-dependencies]
windows = "0.21.1"
