[package]
name = "etw-reader"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.8.0"
fxhash = "0.2.1"
memoffset = "0.6"


[dependencies.windows]
version = "0.32"
features =  ["alloc", "Win32_System_Diagnostics_Etw",
             "Win32_System_Diagnostics_Debug",
             "Win32_System_SystemInformation",
             "Win32_Security_Authorization",
             "Win32_System_Memory",
             "Win32_System_Time",
             "Win32_Foundation"]