[package]
name = "etw-reader"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mstange/samply"
documentation = "https://docs.rs/etw-reader"
description = "library for reading ETW etl files"
categories = ["os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
num-traits = "0.2"
num-derive = "0.4"
once_cell = "1.8.0"
fxhash = "0.2.1"
memoffset = "0.9"

[dependencies.windows]
version = "0.56"
features =  ["Win32_System_Diagnostics_Etw",
             "Win32_System_Diagnostics_Debug",
             "Win32_System_SystemInformation",
             "Win32_Security_Authorization",
             "Win32_System_Memory",
             "Win32_System_Time",
             "Win32_Foundation"]
