[package]
name = "fxprof-processed-profile"
version = "0.7.0"
edition = "2021"
rust-version = "1.60" # needed by bytesize
authors = ["Markus Stange <mstange.moz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Create profiles in the Firefox Profiler's processed profile JSON format."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[dependencies]
bitflags = "2.5"
serde_json = "1.0"
serde = "1.0.198"
serde_derive = "1.0.188"
debugid = "0.8.0"
fxhash = "0.2.1"

[dev-dependencies]
assert-json-diff = "2.0.1"
