[package]
name = "fxprof-processed-profile"
version = "0.0.0"
edition = "2018"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Create profiles in the Firefox Profiler's processed profile JSON format."
repository = "https://github.com/mstange/perfrecord/"
readme = "README.md"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
debugid = "0.8.0"
fxhash = "0.2.1"

[dev-dependencies]
assert-json-diff = "2.0.1"
