[package]
name = "gecko_profile"
version = "0.1.1"
edition = "2018"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Create profiles in the Gecko profile JSON format."
repository = "https://github.com/mstange/perfrecord/"
readme = "README.md"

[dependencies]
serde_json = "1.0.53"
debugid = "0.7.2"
