[package]
name = "profiler-get-symbols"
version = "0.16.0"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Symbolication utilities for the Firefox profiler."
homepage = "https://github.com/mstange/profiler-get-symbols/"
repository = "https://github.com/mstange/profiler-get-symbols/"
readme = "README.md"

[features]
default = []
send_futures = []
partial_read_stats = ["bytesize", "bitvec"]

[dependencies.addr2line]
default-features = false
features = ["std", "fallible-iterator"]
version = "0.17.0"
# path = "../../addr2line"

[dependencies.gimli]
default-features = false
features = ["read"]
version = "0.26"

[dependencies.object]
default-features = false
features = ["std", "read_core", "archive", "elf", "macho", "pe", "unaligned", "compression"]
version = "0.28.1"

[dependencies]
# pdb-addr2line = { path = "../../pdb-addr2line" }
pdb-addr2line = "0.7.2"
uuid = "1.0.0"
thiserror = "1.0.26"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
cpp_demangle = "0.3.5"
msvc-demangler = "0.9.0"
rustc-demangle = "0.1.21"
bitflags = "1.2.1"
bytesize = { version = "1.0.1", optional = true }
bitvec = { version = "1.0.0", optional = true }
rangemap = "1.0.1"
elsa = "1.4.0"
memchr = { version = "2.4", default-features = false }
regex = "1.5"
srcsrv = "0.2.2"
lzma-rs = "0.2.0"
serde-hex = "0.1.0"
macho-unwind-info = "0.3.0"
debugid = "0.8.0"
flate2 = "1"
