[package]
name = "mach-ipc-rendezvous"
version = "0.1.0"
description = "A subset of the ipc-channel mach functionality to establish two-way communication and exchange the mach_task_self port."
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
libc = "0.2.70"
rand = "0.7.3"
lazy_static = "1.4.0"
