[package]
name = "perfrecord-mach-ipc-rendezvous"
version = "0.2.0"
description = "A subset of the ipc-channel mach functionality to establish two-way communication and exchange the mach_task_self port."
homepage = "https://github.com/mstange/perfrecord/"
repository = "https://github.com/mstange/perfrecord/"
readme = "README.md"
authors = ["The Servo Project Developers", "Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
libc = "0.2.70"
rand = "0.8.4"
lazy_static = "1.4.0"
