[package]
name = "perfrecord-preload"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[lib]
crate_type = ["dylib"]

[profile.release]
lto = true
panic = 'abort'

[dependencies]
mach-ipc-rendezvous = { path = "../mach-ipc-rendezvous" }
