[package]
name = "perfrecord"
version = "0.5.1"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A macOS command line profiler."
homepage = "https://github.com/mstange/perfrecord/"
repository = "https://github.com/mstange/perfrecord/"
readme = "Readme.md"

[dependencies]
# perfrecord-mach-ipc-rendezvous = { path = "../perfrecord-mach-ipc-rendezvous" }
perfrecord-mach-ipc-rendezvous = "0.2.0"

# profiler-symbol-server = { path = "../../profiler-symbol-server" }
profiler-symbol-server = "0.3.0"

tokio = { version = "1.6.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "0.8.1"
libc = "0.2.71"
serde_json = "1.0.53"
mach = "0.3.2"
tempfile = "3.1.0"
structopt = "0.3.14"
thiserror = "1.0.19"
backtrace = "0.3.48"
crossbeam-channel = "0.5.1"

[profile.release]
debug = true
panic = "abort"
