[package]
name = "perfrecord"
version = "0.6.4"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A macOS command line profiler."
repository = "https://github.com/mstange/perfrecord/"
readme = "Readme.md"

[dependencies]
perfrecord-mach-ipc-rendezvous = { version = "0.2.1", path = "../perfrecord-mach-ipc-rendezvous" }

# profiler-symbol-server = { path = "../../profiler-symbol-server" }
profiler-symbol-server = "0.7.3"

tokio = { version = "1.6.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "0.8.1"
libc = "0.2.71"
mach = "0.3.2"
tempfile = "3.1.0"
structopt = "0.3.14"
thiserror = "1.0.19"
crossbeam-channel = "0.5.1"
signal-hook = "0.3.9"
serde_json = "1.0.53"
gecko_profile = { version = "0.2.0", path = "../gecko_profile" }

[profile.release]
debug = true
panic = "abort"
