[package]
name = "samply-api"
version = "0.23.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.67"
description = "JSON API for querying symbol information, uses samply-symbols."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[features]
default = []
send_futures = ["samply-symbols/send_futures"]

[dependencies]
samply-symbols = { version = "0.22.0", path = "../samply-symbols" }
thiserror = "1.0.61"
serde = "1.0.202"
serde_derive = "1.0.188"
serde_json = "1.0.117"
yaxpeax-arch = { version = "0.2.8", default-features = false }
yaxpeax-x86 = { version = "1.1.4", default-features = false, features = ["std", "fmt"] }
yaxpeax-arm = { version = "0.2.5", default-features = false, features = ["std"] }

[dev-dependencies]
memmap2 = "0.9.4"
anyhow = "1.0.86"
futures = "0.3.5"
assert-json-diff = "2.0.1"
serde_json = "1.0.117"
