[package]
name = "samply-in-process"
version = "0.13.1"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"
description = "A library for profiling of the current process."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[dependencies]

fxprof-processed-profile = { version = "0.8", path = "../fxprof-processed-profile" }
framehop-in-process = { path = "../framehop-in-process" }
framehop = "0.14"
linux-perf-data = "0.11"

byteorder = "1.4.3"
debugid = "0.8.0"
memchr = "2.7.2"
memmap2 = "0.9.4"
serde_json = "1"
thiserror = "2"
tempfile = "3.13"
uuid = { version = "1.11", features = ["v4"] }
percent-encoding = "2.1.0"
libc = "0.2"
flate2 = "1.0"
opener = { version = "0.8", default-features = false }
rand = "0.9"
nix-base32 = "0.2.0"
serde_derive = "1.0.137"
serde = "1.0.204"
wholesym = { version = "0.8.1", path = "../wholesym", features = ["api"]}
platform-dirs = "0.3"
rustc-hash = "2"
mio = { version = "1", features = ["os-ext", "os-poll"] }
ctrlc = "3.4.4"
log = "0.4.21"
env_logger = "0.11"
cfg-if = "1.0.0"
fs4 = "0.13"
humantime = "2.1.0"
indexmap = "2.9.0"
shlex = "1.3.0"

[target.'cfg(target_os = "macos")'.dependencies]

mach2 = "0.4.2"
lazy_static = "1.5.0"
flate2 = "1.0"
sysctl = "0.6.0"
plist = "1.7.0"
crossbeam-channel = "0.5.15"

[dependencies.object]
default-features = false
features = ["std", "read_core", "elf", "pe", "unaligned", "write"]
version = "0.37"
