[package]
name = "samply-mac-preload"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate_type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
libc = { version = "0.2.70", default-features = false }

