[package]
name = "samply-mac-preload"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
# This crate is not part of the samply workspace.

[lib]
crate_type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
libc = { version = "0.2", default-features = false }
spin = "0.9.8"

