[package]
name = "samply-markers"
version = "0.1.0"
edition = "2024"
authors = ["Erik Nordin <nordzilla@nordzil.la>"]
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
description = "Emit markers for samply profiles."
repository = "https://github.com/mstange/samply/"
readme = "README.md"
keywords = ["profiling", "markers", "instrumentation", "tracing", "performance"]


[features]
default = []
enabled = [
    "dep:nix",
    "dep:smallstr",
    "dep:tempfile",
]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["mman", "process", "time"], optional = true }
smallstr = { version = "0.3.1", optional = true }
tempfile = { version = "3.23.0", optional = true }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", features = ["process"] }
regex = "1.12.2"
serial_test = "3.2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
