[package]
name = "samply-markers"
version = "0.1.0"
edition = "2024"
authors = ["Erik Nordin <nordzilla@nordzil.la>"]
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
description = "Emit markers for samply profiles."
repository = "https://github.com/mstange/samply/"
readme = "README.md"
keywords = ["profiling", "markers", "instrumentation", "tracing", "performance"]


[features]
default = []
enabled = [
    "dep:itoa",
    "dep:nix",
    "dep:tempfile",
]

[target.'cfg(unix)'.dependencies]
itoa = { version = "1.0.15", optional = true }
nix = { version = "0.30.1", features = ["mman", "process", "time"], optional = true }
tempfile = { version = "3.23.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
mach2 = "0.4"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", features = ["process"] }
regex = "1.12.2"
serial_test = "3.2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12"
futures = "0.3"
rayon = "1.10"
