[package]
name = "samply-server"
version = "0.14.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A local webserver that lets the Firefox profiler obtain symbol information."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[dependencies.object]
default-features = false
features = ["std", "read_core", "macho", "unaligned"]
version = "0.29"

[dependencies]
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["rt", "fs", "rt-multi-thread", "macros"]  }
futures = "0.3"
memmap2 = "0.5.0"
serde_json = "1.0.53"
uuid = "1.0.0"
structopt = "0.3.14"
percent-encoding = "2.1.0"
libc = "0.2.71"
flate2 = "1.0"
webbrowser = "0.7.0"
rand = "0.8.4"
nix-base32 = "0.1.1"
serde_derive = "1.0.137"
serde = "1.0.137"
symsrv = "0.2.0"
wholesym = { version = "0.1.0", path = "../wholesym" }

# Needed for moria_mac_spotlight, to find dSYM files
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.2"
core-foundation = "0.9.1"

[profile.release]
debug = true
