[package]
name = "samply-symbols"
version = "0.21.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.61"
description = "Symbolication utilities for the Firefox profiler."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[features]
default = []
send_futures = []
partial_read_stats = ["bytesize", "bitvec"]

[dependencies.addr2line]
default-features = false
features = ["std", "fallible-iterator"]
version = "0.21.0"
# path = "../../addr2line"

[dependencies.gimli]
default-features = false
features = ["read"]
version = "0.28.1"

[dependencies.object]
default-features = false
features = ["std", "read_core", "archive", "elf", "macho", "pe", "unaligned", "compression"]
version = "0.34"

[dependencies]
#pdb-addr2line = { path = "../../pdb-addr2line" }
pdb-addr2line = "0.11.0"
uuid = "1.0.0"
thiserror = "1.0.58"
cpp_demangle = "0.4.0"
msvc-demangler = "0.10.0"
rustc-demangle = "0.1.21"
scala-native-demangle = "0.0.6" 
bitflags = "2"
bytesize = { version = "1.0.1", optional = true }
bitvec = { version = "1.0.0", optional = true }
rangemap = "1.5.1"
elsa = "1.4.0"
memchr = { version = "2.4", default-features = false }
srcsrv = "0.2.2"
lzma-rs = "0.3"
macho-unwind-info = "0.4.0"
debugid = "0.8.0"
flate2 = "1"
yoke = "0.7"
yoke-derive = "0.7"
nom = "7.1.1"
zerocopy = "0.7"
zerocopy-derive = "0.7"
linux-perf-data = "0.9.0"

[dev-dependencies]
memmap2 = "0.9.4"
anyhow = "1.0.80"
futures = "0.3.5"
