[package]
name = "samply"
version = "0.12.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2021"
rust-version = "1.74" # needed by clap and wholesym
license = "MIT OR Apache-2.0"
description = "A command line profiler for macOS and Linux."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[dependencies]

fxprof-processed-profile = { version = "0.7", path = "../fxprof-processed-profile" }
# framehop = { path = "../../framehop" }
framehop = "0.11.1"
# linux-perf-data = { path = "../../linux-perf-data" }
linux-perf-data = "0.10.1"

tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.10"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
byteorder = "1.4.3"
debugid = "0.8.0"
memchr = "2.7.2"
memmap2 = "0.9.4"
serde_json = "1.0.116"
thiserror = "1.0.59"
uuid = "1.8.0"
percent-encoding = "2.1.0"
libc = "0.2.71"
flate2 = "1.0"
opener = { version = "0.7.0", default-features = false }
rand = "0.8.4"
nix-base32 = "0.1.1"
serde_derive = "1.0.137"
serde = "1.0.198"
wholesym = { version = "0.5.0", path = "../wholesym", features = ["api"]}
dirs = "5.0.0"
once_cell = "1.17"
fxhash = "0.2.1"
mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }

[target.'cfg(any(target_os = "android", target_os = "macos", target_os = "linux"))'.dependencies]

libc = "0.2.71"
crossbeam-channel = "0.5.12"
signal-hook = "0.3.9"

[target.'cfg(target_os = "macos")'.dependencies]

mach = "0.3.2"
lazy_static = "1.4.0"
flate2 = "1.0.23"
sysctl = "0.5.4"
tempfile = "3.10.1"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]

parking_lot = "0.12.1"
num_cpus = "1.13.1"
uname = "0.1.1"
nix = { version = "0.28", features = ["fs", "process"] }

[dependencies.object]
default-features = false
features = ["std", "read_core", "elf", "unaligned", "write"]
version = "0.35"
