[package]
name = "samply"
version = "0.12.0"
authors = ["Markus Stange <mstange@themasta.com>"]
edition = "2021"
rust-version = "1.75" # needed by wholesym -> fs4
license = "MIT OR Apache-2.0"
description = "A command line profiler for macOS and Linux."
repository = "https://github.com/mstange/samply/"
readme = "README.md"

[dependencies]

fxprof-processed-profile = { version = "0.7", path = "../fxprof-processed-profile" }
# framehop = { path = "../../framehop" }
framehop = "0.12"
# linux-perf-data = { path = "../../linux-perf-data" }
linux-perf-data = "0.10.1"

tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.11"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
byteorder = "1.4.3"
debugid = "0.8.0"
memchr = "2.7.2"
memmap2 = "0.9.4"
serde_json = "1.0.117"
thiserror = "1.0.61"
tempfile = "3.10.1"
uuid = {  version = "1.8.0", features = ["v4"] }
percent-encoding = "2.1.0"
libc = "0.2.155"
flate2 = "1.0"
opener = { version = "0.7.1", default-features = false }
rand = "0.8.4"
nix-base32 = "0.1.1"
serde_derive = "1.0.137"
serde = "1.0.202"
wholesym = { version = "0.6.0", path = "../wholesym", features = ["api"]}
platform-dirs = "0.3"
once_cell = "1.17"
fxhash = "0.2.1"
mio = { version = "0.8.11", features = ["os-ext", "os-poll"] }
ctrlc = "3.4.4"
log = "0.4.21"
env_logger = "0.11.3"
cfg-if = "1.0.0"
fs4 = "0.8.3"

[target.'cfg(any(target_os = "android", target_os = "macos", target_os = "linux"))'.dependencies]

libc = "0.2.155"
crossbeam-channel = "0.5.13"

[target.'cfg(target_os = "macos")'.dependencies]

mach = "0.3.2"
lazy_static = "1.5.0"
flate2 = "1.0.30"
sysctl = "0.5.4"
tempfile = "3.10.1"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]

parking_lot = "0.12.2"
num_cpus = "1.13.1"
uname = "0.1.1"
nix = { version = "0.29", features = ["fs", "process"] }

[target.'cfg(windows)'.dependencies]

rangemap = "1.3.0"
bitflags = "2.4.2"
memoffset = "0.9"
num-traits = "0.2"
num-derive = "0.4"
runas = "1.2.0"
which = "6.0.1"
etw-reader = { path = "../etw-reader" }
# linux-perf-data = "0.10.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.57"
features =  ["Win32",
             "Win32_Foundation",
             "Win32_Security",
             "Win32_Security_Authorization",
             "Win32_Storage",
             "Win32_Storage_FileSystem",
             "Win32_System",
             "Win32_System_Diagnostics_Debug",
             "Win32_System_Diagnostics_Etw",
             "Win32_System_Memory",
             "Win32_System_ProcessStatus",
             "Win32_System_SystemInformation",
             "Win32_System_Threading",
             "Win32_System_Time",
             "Win32_System_WindowsProgramming",
             "Win32_UI_WindowsAndMessaging"]

[dependencies.object]
default-features = false
features = ["std", "read_core", "elf", "pe", "unaligned", "write"]
version = "0.36"
